2009-Jul-20  yselkowitz

	* bin/prep_libtool_modules.sh: Adjust ltversion grep for current libtool.

	* lib/apache2.cygclass: Only define APREQ_* if libapreq2-devel is installed.

	* lib/gtkmm.cygclass (gtkmm_autoreconf): Allow the wrappers to set
	the correct automake version.

	* lib/tcl.cygclass (LIBTK): Fixed typo.

	* lib/kde3.cygclass: Define KDEDIR for both cmake and autotools builds.

	* lib/kde4.cygclass: Define SRC_URI for kdevelop-3.9.94.
	(kde4_compile): Let FindAutomoc4 do it's job.
	(kde4_install): Accept arguments.

	* lib/Makefile.am:
	* lib/waf.cygclass: NEW cygclass for Waf-based packages.

2009-Jul-06  yselkowitz

	* bin/cygport.in: Do not define CPP/CXXCPP, as it messes up stages
	2/3 of the gcc build, and autoconf will do the right thing anyway:
	http://thread.gmane.org/gmane.os.cygwin.ports.general/615

2009-Jun-21  yselkowitz

	* bin/prep_freedesktop_mime.sh: postinstall should test for
	update-{desktop,mime}-database before running to avoid log spam;
	see http://cygwin.com/ml/cygwin/2009-06/msg00714.html

	* Post-release version bump.

2009-Jun-16  yselkowitz

	* Tagged 0.9.7.

	* lib/kde4.cygclass: Add SRC_URI for stable KOffice2.

	* lib/git.cygclass: Allow GIT_MODULE to be user-defined.

	* lib/xfce4.cygclass: Leave ORIG_PN handling to the .cygport file.
	(xfce4_autoreconf): Declare glib-gettext usage.
	(xfce4_compile): No need to override libexecdir any more.

	* lib/python.cygclass (python_optimize): Omit ${D} from compiled location.

2009-Jun-15  yselkowitz

	* bin/cygport.in (cyginstall):
	* lib/autotools.cygclass (cygconf): Default libexecdir should be /usr/lib;
	see http://cygwin.com/ml/cygwin-apps/2009-06/msg00101.html and thread.

2009-Jun-09  yselkowitz

	* lib/gnome.org.cygclass: GNOME development has moved from subversion
	to git; define GIT_URI instead of SVN_URI.

2009-Jun-05  yselkowitz

	* configure.ac: Post-release version bump.	

	* Tagged 0.9.6.

2009-Jun-04  yselkowitz

	* bin/cygport.in: Export CC, CXX, and friends.